--- a/app/Presenter/@layout.latte
+++ b/app/Presenter/@layout.latte
@@ -15,7 +15,7 @@
 <head>
 	<title>{$metaTitle . ' | ' . $webTranslationData->title|truncate:60}</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" n:ifset="$pageTranslation->description" content="{$pageTranslationData->description|truncate:300}">
 	<meta name="theme-color" content="{$themeData->bodyBg}">
 	<meta property="og:type" content="{$entity ? $entityName : 'page'}">
