--- a/app/Presenter/@layout.latte
+++ b/app/Presenter/@layout.latte
@@ -24,7 +24,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" n:ifset="$pageTranslation->description" content="{$pageTranslationData->description|truncate:300}">
-	<meta name="theme-color" content="{$webData->color}">
+	<meta name="theme-color" content="{$themeData->contentBg}">
 	<meta property="og:type" content="{$entity ? $entityName : 'page'}">
 	<meta property="og:title" content="{$metaTitle|truncate:60}">
 	<meta property="og:description" n:if="$pageTranslation->description" content="{$pageTranslationData->description|truncate:300}">
