--- a/app/Presenter/@layout.latte
+++ b/app/Presenter/@layout.latte
@@ -1,22 +1,4 @@
-{varType App\Model\Language\LanguageData $languageData}
-{varType Nextras\Orm\Entity\IEntity|null $entity}
-{varType App\Model\Page\PageData $pageData}
-{varType App\Model\PageTranslation\PageTranslation $pageTranslation}
-{varType App\Model\PageTranslation\PageTranslationData $pageTranslationData}
-{varType App\Model\Web\WebData $webData}
-{varType App\Model\WebTranslation\WebTranslationData $webTranslationData}
-{varType App\Model\Layout\LayoutData $layoutData}
-{varType App\Model\Theme\ThemeData $themeData}
-{varType App\Model\Web\WebData[] $webDatas}
-{varType Webovac\Core\Lib\CmsUser $cmsUser}
-{varType bool $hasSideMenu}
-{varType string|null $entityName}
-{varType string $title}
-{varType string $metaTitle}
-{varType string $metaType}
-{varType string $metaUrl}
-{varType bool $showAdmin}
-{varType array $bodyClasses}
+{templateType App\Presenter\BasePresenterTemplate}
 <!DOCTYPE html>
 <html lang="{$languageData->shortcut}">
 <head>
@@ -45,7 +27,7 @@
 	<link rel="shortcut icon" n:ifset="$smallIconUrl" href="{$baseUrl}/{$smallIconUrl}?m={=$smallIconUrl|mTime}">
 	<link rel="apple-touch-icon" n:ifset="$largeIconUrl" href="{$baseUrl}/{$largeIconUrl}?m={=$largeIconUrl|mTime}">
 	<link rel="manifest" href="{plink '//Manifest:', host: $webData->host, basePath: $webData->basePath, lang: $languageData->shortcut}?m={$webTranslationData->updatedAt ?: $webTranslationData->createdAt|date:'U'}">
-	<link rel="stylesheet" href="{$baseUrl}/dist/css/bundle.css?m={='dist/css/bundle.css'|mTime}">
+	<link rel="stylesheet" href="{$baseUrl}/dist-pro/css/bundle.css?m={='dist/css/bundle.css'|mTime}">
 	<link rel="stylesheet" n:if="isModuleInstalled('style')" href="{plink '//Style:', host: $webData->host, basePath: $webData->basePath}?m={max($webData->updatedAt ?: $webData->createdAt, $themeData->updatedAt ?: $themeData->createdAt, $layoutData->updatedAt ?: $layoutData->createdAt)|date:'U'}">
 	<link rel="stylesheet" n:else href="{plink '//Style:', host: $webData->host, basePath: $webData->basePath}?m={$webData->updatedAt ?: $webData->createdAt|date:'U'}">
 </head>
@@ -68,10 +50,10 @@
 				</div>
 				<div class="footer small" n:if="$showAdmin">
 					<p n:if="$showAdmin">
-						<a href="{plink Home:, 'Admin:PageDetail', $pageData->id}">Administrace</a>
+						<a href="{plink Home:, 'Admin:PageDetail', $pageData->id, lang: $adminLang}">Administrace</a>
 						<br>
 						{foreach $webDatas as $w}
-							<a href="{plink Home:, 'Home', host: $w->host, basePath: $w->basePath, lang: 'cs'}" class="link-secondary">
+							<a href="{plink Home:, 'Home', host: $w->host, basePath: $w->basePath, lang: $languageShortcuts[$w->defaultLanguage]}" class="link-secondary">
 								{$w->host}{if $w->basePath}/{$w->basePath}{/}
 							</a>
 							{sep} · {/}
